--- a/fakeweb-android-parent/fakeweb-android/pom.xml
+++ b/fakeweb-android-parent/fakeweb-android/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>fakeweb-android</groupId>
     <artifactId>fakeweb-android-parent</artifactId>
-    <version>0.1.1</version>
+    <version>0.1.2</version>
   </parent>
 
   <artifactId>fakeweb-android</artifactId>
@@ -141,4 +141,5 @@
     </profile>
   </profiles>
 
+  <packaging>apk</packaging>
 </project>
